# Cpp_starter

./: .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  README.md
app/: CMakeLists.txt  main.cpp
cmake/: Docs.cmake  Sanitizer.cmake  Warnings.cmake
docs/dynamic-design/sequence-diagram/: ecc-algo-seq.puml
docs/static-design/class-diagram/: sample-lib-components.puml
docs_doxygen/: Doxyfile
inc/: func.h
scripts/: buildProject.csh  cppcheck-htmlreport.py  create-report.csh  result.xml  static-check.csh
src/: CMakeLists.txt  func.cpp
tests/: CMakeLists.txt
tests/integration-test/: CMakeLists.txt  main.integration_test.cpp
tests/unit-test/: CMakeLists.txt
